# functionsai

./: .gitignore  README.md  pyproject.toml
functionsai/: __init__.py
functionsai/functions/: __init__.py
functionsai/modules/: __init__.py
functionsai/scoring/: __init__.py  description.py  name.py  prompt.py
notebooks/: functionsai.ipynb
tests/: conftest.py  test_functions.py  test_functionsai.py  test_modules.py
