[tool.poetry]
name = "functionsai"
version = "0.1.0"
description = "FunctionsAI provides wrappers that map modules to their functions and functions to their descriptions and related prompts and functionality to help enhance llm reliability"
authors = ["Yassin Kortam <yassinkortam@g.ucla.edu>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''